# python-cyborgclient

./: .coveragerc  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cyborgclient/: __init__.py  exceptions.py  i18n.py  shell.py  version.py
cyborgclient/common/: base.py  cliutils.py  http.py  httpclient.py  utils.py
cyborgclient/common/apiclient/: exceptions.py
cyborgclient/osc/: plugin.py
cyborgclient/osc/v1/: accelerator.py
cyborgclient/osc/v2/: accelerator_request.py  attribute.py  deployable.py  device.py  device_profile.py
cyborgclient/tests/: test_cyborgclient.py
cyborgclient/tests/unit/: test_shell.py  utils.py
cyborgclient/tests/unit/common/: test_httpclient.py  test_utils.py
cyborgclient/tests/unit/osc/: fakes.py  test_plugin.py
cyborgclient/tests/unit/osc/v2/: fakes.py  test_accelerator_request.py  test_attribute.py  test_deployable.py  test_device.py  test_device_profile.py
cyborgclient/tests/unit/v1/: shell_test_base.py  test_accelerators.py  test_accelerators_shell.py  test_client.py  test_deployables.py
cyborgclient/v1/: accelerators.py  accelerators_shell.py  basemodels.py  client.py  deployables.py  shell.py
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
releasenotes/notes/: drop-py-2-7-d47826d4387f40fe.yaml  drop-v1-api-and-fix-ssl-7a8f4b2c9d3e1f05.yaml  show-dp-by-name-4d22b106b718f215.yaml  support-project-id-931fc61c818da675.yaml
releasenotes/source/: conf.py  index.rst  stein.rst  train.rst
