[metadata]
name = python-cyborgclient
summary = Python client for cyborg API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/python-cyborgclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    cyborgclient

[entry_points]
console_scripts =
    cyborg = cyborgclient.shell:main

openstack.cli.extension =
    accelerator = cyborgclient.osc.plugin

openstack.accelerator.v1 =
    accelerator_list = cyborgclient.osc.v1.accelerator:ListAccelerator

openstack.accelerator.v2 =
    accelerator_deployable_list = cyborgclient.osc.v2.deployable:ListDeployable
    accelerator_deployable_program = cyborgclient.osc.v2.deployable:ProgramDeployable
    accelerator_deployable_show = cyborgclient.osc.v2.deployable:ShowDeployable
    accelerator_device_list = cyborgclient.osc.v2.device:ListDevice
    accelerator_device_show = cyborgclient.osc.v2.device.ShowDevice
    accelerator_device_profile_list = cyborgclient.osc.v2.device_profile:ListDeviceProfile
    accelerator_device_profile_create = cyborgclient.osc.v2.device_profile:CreateDeviceProfile
    accelerator_device_profile_delete = cyborgclient.osc.v2.device_profile:DeleteDeviceProfile
    accelerator_device_profile_show = cyborgclient.osc.v2.device_profile:ShowDeviceProfile
    accelerator_arq_list = cyborgclient.osc.v2.accelerator_request:ListAcceleratorRequest
    accelerator_arq_create = cyborgclient.osc.v2.accelerator_request:CreateAcceleratorRequest
    accelerator_arq_delete = cyborgclient.osc.v2.accelerator_request:DeleteAcceleratorRequest
    accelerator_arq_show = cyborgclient.osc.v2.accelerator_request:ShowAcceleratorRequest
    accelerator_arq_bind = cyborgclient.osc.v2.accelerator_request:BindAcceleratorRequest
    accelerator_arq_unbind = cyborgclient.osc.v2.accelerator_request:UnbindAcceleratorRequest

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cyborgclient/locale
domain = cyborgclient

[update_catalog]
domain = cyborgclient
output_dir = cyborgclient/locale
input_file = cyborgclient/locale/cyborgclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cyborgclient/locale/cyborgclient.pot
